<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/news_settings_menu_title"
    android:summary="@string/settings_summary">

    <ListPreference
        android:defaultValue="@string/guardian_code"
        android:entries="@array/news_outlet_labels"
        android:entryValues="@array/news_outlet_keys"
        android:key="@string/settings_news_outlet_key"
        android:title="@string/settings_news_outlet_label" />

    <ListPreference
        android:defaultValue="@string/ten"
        android:entries="@array/number_of_articles_in_single_page"
        android:entryValues="@array/number_of_articles_in_single_page"
        android:key="@string/settings_page_size_key"
        android:title="@string/settings_page_size_label" />

</PreferenceScreen>